--- a/markups-eventoz/markups-eventoz/index.html
+++ b/markups-eventoz/markups-eventoz/index.html
@@ -54,7 +54,7 @@
 			      </button>
 
 			      <!-- Logo -->
-			      <a class="navbar-brand" href="index.html">Eventoz</a>
+			      <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="150"></a>
 
 			    </div>
 
@@ -62,13 +62,14 @@
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      	<ul class="nav navbar-nav mu-menu navbar-right">
 			      		<li><a href="#mu-hero">Home</a></li>
-				        <li><a href="#mu-about">About Us</a></li>
-				        <li><a href="#mu-schedule">Schedule</a></li>
-			            <li><a href="#mu-speakers">Speakers</a></li>
-			            <li><a href="#mu-pricing">Price</a></li>
-			            <li><a href="#mu-register">Register</a></li>
-			            <li><a href="#mu-sponsors">Sponsors</a></li>
-			            <li><a href="#mu-contact">Contact</a></li>
+				        <li><a href="#mu-about">About Event</a></li>
+						<li><a href="#mu-register">Basic Info</a></li>
+                        <li><a href="#mu-schedule">Schedule</a></li>
+                        <li><a href="#mu-artists">The Artists</a></li>
+                        <li><a href="#mu-cause">The Cause</a></li>
+                        <li><a href="#mu-joinus">Join Us</a></li>
+			            <li><a href="#mu-venue">Venue</a></li>
+                       	<li><a href="#mu-footer">About Techrow Fund</a></li>
 			      	</ul>
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container-fluid -->
@@ -341,6 +342,8 @@
 
 			<!-- First Guest -->
 		<section id="mu-about">
+         <section id="mu-artists">
+        </section>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -388,6 +391,8 @@
        
        	<!-- Start Schedule  -->
 		<section id="mu-schedule">
+         <section id="mu-cause">
+        </section>
 			<div class="container">
 				<div class="row">
 					<div class="colo-md-12">
@@ -410,6 +415,8 @@
 		
 		<!-- Start Register  -->
 		<section id="mu-register">
+        <section id="mu-joinus">
+        </section>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
